# CHAP

./: README.md  aws_test.ipynb  llm_handler.py
chap-backend/: aws_test.ipynb  extracted_data_15.txt  installing ollama.txt  llm_handler.py  pyproject.toml
chap-backend/chap_backend/: anon.py  memory.py  prompts.py
chap-frontend/CHAAP/: CHAAP.html  background.js  manifest.json  popup.js
chap-frontend/Plaintext/: background.js  content.js  manifest.json  popup.html  popup.js
chap-frontend/Plaintext multi-page/: background.js  content.js  popup.html  popup.js
chap-frontend/Reading-time example/: manifest.json
chap-frontend/Reading-time example/scripts/: content.js
chap-frontend/Response/: manifest.json
chap-frontend/Source HTML/: manifest.json  popup.html
chap-frontend/focus-mode/: manifest.json
chap-frontend/junk/Plaintext multi-page/: background.js  manifest.json  popup.html
chap-frontend/junk/Response/: background.js  popup.html  popup.js
